# math-anim

./: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile
src/: main.cpp  math_anim.cpp
